<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/dimen_28sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/yourEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingEnd="@dimen/dimen_12dp"
            android:textSize="@dimen/dimen_12sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/yourPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingEnd="@dimen/dimen_12dp"
            android:textSize="@dimen/dimen_12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:textColor="@color/textBlue"
            android:textSize="@dimen/dimen_13sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey_400" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/or"
                android:textColor="@color/grey"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey_400" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_outlined"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    app:srcCompat="@drawable/google" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/google"
                    android:textColor="@color/textBlue" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_outlined"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    app:srcCompat="@drawable/facebook" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/facebook"
                    android:textColor="@color/textBlue" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:gravity="center_vertical|center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dontHaveAnAccount"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/textBlue" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>